--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -143,7 +143,7 @@
       </div>
     </header>
     <section class="ucb-main-nav-section mobile  ucb-header-{{ header_color }}" role="navigation">
-      <div class="ucb-main-nav-continer ucb-secondary-menu-position-{{ ucb_secondary_menu_position == 'above' ? 'above' : 'inline container'}} ucb-button-{{menu_button_color}}">
+      <div class="ucb-main-nav-container ucb-secondary-menu-position-{{ ucb_secondary_menu_position == 'above' ? 'above' : 'inline container'}} ucb-button-{{menu_button_color}}">
         {{ page.primary_menu }}
         {{ page.secondary_menu }}
       </div>
